# solfege-gen

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: README.md  audio_mixing.ipynb  midi_transcription.ipynb  music_separation.ipynb  separation_by_mdx.ipynb  transcribed_output.mid
solfege_app/: README.md
solfege_app/pipeline/: README.md
