[project]
name = "solfege-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs>=4.0.1",
    "ipykernel>=7.1.0",
    "music21>=9.9.1",
    "numpy>=1.26.4",
    "pydub>=0.25.1",
    "setuptools>=80.9.0",
    "torchcrepe>=0.0.24",
]
