[project]
name = "solfege-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "audio-separator[cpu]>=0.18.0",
    "basic-pitch>=0.4.0",
    "demucs",
    "ipykernel",
    "librosa>=0.11.0",
    "music21",
    "numpy",
    "onnxruntime>=1.19.2",
    "pretty-midi",
    "pydub",
    "setuptools",
]